@@ -223,7 +223,7 @@ private:
 	void	OnSetCategory( wxCommandEvent& event );	
 	void	OnSetStatus( wxCommandEvent& event );
 	void	OnClearCompleted( wxCommandEvent& event );
-	void	OnGetED2KLink( wxCommandEvent& event );
+	void	OnGetLink( wxCommandEvent& event );
 	void	OnGetFeedback( wxCommandEvent& event );
 	void	OnGetRazorStats( wxCommandEvent& event );
 	void	OnViewFileInfo( wxCommandEvent& event );
