@@ -55,6 +55,7 @@ enum {
 	MP_PRIOVERYHIGH,
 	MP_POWERSHARE,
 	MP_PRIOAUTO,
+	MP_GETMAGNETLINK,
 	MP_GETED2KLINK,
 	MP_GETSOURCEED2KLINK,
 	MP_GETHOSTNAMESOURCEED2KLINK,
